--- a/templates/home.html
+++ b/templates/home.html
@@ -1,23 +1,60 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        
+        <title>{{companyname}}</title>
+
+        <style>
+            
+        </style>
+
     </head>
 
     <body>
-        <h1>Test</h1>
-        <h2>About</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+        <div class="container">
+            <h1 class="text-center mt-5 mb-5">{{companyname}}</h1>
+            <h2 class ="text-center mt-2 mb-4">About {{companyname}}</h2>
+            <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</p>
+    
+            <h2 class="text-center mt-2 mb-4">Job Openings</h2>
 
-        <h2>Open</h2>
-        <div>
+
             {% for job in jobs %}
-            <div>
-                {{job['title']}}
+            <div class="border-bottom row" style="margin-bottom:16px; padding-bottom:16px;">
+                <div class="col-10">
+                    <h4 style="color:rgb(120,120,120)">{{job['title']}}</h4>
+                    <div>
+                        <p><b>Location: </b>{{job['location']}}</p>
+                    </div>
+                    {% if 'salary' in job %}
+                    <div>
+                        <p><b>Salary: </b>{{job['salary']}}</p>
+                    </div>
+                    {% endif %}
+                </div>
+                <div class="col-2">
+                    <button class="btn btn-outline-primary" type="submit">Apply</button>
+                </div>
             </div>
             {% endfor %}
+
         </div>
-        <button>Contact</button>
-    </body>
-    
+
+            
+            <div class="text-center mt-5 mb-3">
+                <button type="button" class="btn btn-primary btn-lg">Contact us</button>
+            </div>
+            <div class="text-center mb-3">
+                <p class="h6">
+                    Copyright Jovian Careers 2022
+                </p>
+            </div>
+
+
+            
+        </div>
+    </body>  
 </html>
