--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,7 @@
     </head>
 
     <body>
+        {% include 'nav.html'%}
         <div class="container">
             <h1 class="text-center mt-5 mb-5">{{companyname}}</h1>
             <h2 class ="text-center mt-2 mb-4">About {{companyname}}</h2>
@@ -23,22 +24,7 @@
 
 
             {% for job in jobs %}
-            <div class="border-bottom row" style="margin-bottom:16px; padding-bottom:16px;">
-                <div class="col-10">
-                    <h4 style="color:rgb(120,120,120)">{{job['title']}}</h4>
-                    <div>
-                        <p><b>Location: </b>{{job['location']}}</p>
-                    </div>
-                    {% if 'salary' in job %}
-                    <div>
-                        <p><b>Salary: </b>{{job['salary']}}</p>
-                    </div>
-                    {% endif %}
-                </div>
-                <div class="col-2">
-                    <button class="btn btn-outline-primary" type="submit">Apply</button>
-                </div>
-            </div>
+            {% include 'jobitem.html' %}
             {% endfor %}
 
         </div>
