--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -2,15 +2,23 @@
     <div class="col-10">
         <h4 style="color:rgb(120,120,120)">{{job['title']}}</h4>
         <div>
-            <p><b>Location: </b>{{job['location']}}</p>
+            <p class="h6"><b>Location: </b>{{job['location']}}</p>
         </div>
         {% if 'salary' in job %}
         <div>
-            <p><b>Salary: </b>{{job['salary']}}</p>
+            <p class="h6"><b>Salary: </b>{{job['salary']}}</p>
+        </div>
+        <div>
+            <p class="h6"><b>Responsibilities: </b>{{job['responsibilities']}}</p>
+        </div>
+        <div>
+            <p class="h6"><b>Requirements: </b>{{job['requirements']}}</p>
         </div>
         {% endif %}
     </div>
     <div class="col-2">
-        <button class="btn btn-outline-primary" type="submit">Apply</button>
+        <div style="text-align:right;">
+            <button class="btn btn-outline-primary" type="submit">Apply</button>
+        </div>
     </div>
 </div>
