--- a/templates/home.html
+++ b/templates/home.html
@@ -26,20 +26,12 @@
             {% include 'jobitem.html' %}
             {% endfor %}
 
-        </div>
-
-            
             <div class="text-center mt-5 mb-3">
-                <button type="button" class="btn btn-primary btn-lg">Contact us</button>
+                <a href="mailto:email@example.com" type="button" class="btn btn-primary btn-lg">Contact us</a>
             </div>
-            <div class="text-center mb-3">
-                <p class="h6">
-                    Copyright Jovian Careers 2022
-                </p>
-            </div>
-
-
             
         </div>
+
+        {% include 'footer.html' %}
     </body>  
 </html>
