--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -4,19 +4,14 @@
         <div>
             <p class="h6"><b>Location: </b>{{job['location']}}</p>
         </div>
-        {% if 'salary' in job %}
+        {% if 'salary' in job != None %}
         <div>
-            <p class="h6"><b>Salary: </b>{{job['salary']}}</p>
-        </div>
-        <div>
-            <p class="h6"><b>Responsibilities: </b>{{job['responsibilities']}}</p>
-        </div>
-        <div>
-            <p class="h6"><b>Requirements: </b>{{job['requirements']}}</p>
+            <p class="h6"><b>Salary: </b>{{job['currency']}}{{job['salary']}}</p>
         </div>
         {% endif %}
+
     </div>
-    <div class="col-2">
+    <div class="col-2 col align-self-center">
         <div style="text-align:right;">
             <button class="btn btn-outline-primary" type="submit">Apply</button>
         </div>
